Added image upload via add Item API with also updates to tests and openapi
